---
source: crates/normalize/tests/cli_snapshots.rs
assertion_line: 337
expression: "snapshot_help(&[\"analyze\", \"similar-blocks\"])"
---
Detect similar (fuzzy-matching) code blocks via MinHash LSH

Usage: normalize analyze similar-blocks [OPTIONS]

Options:
      --elide-identifiers        
      --elide-literals           
      --show-source              
      --min-lines <MIN_LINES>    Minimum lines for a block to be considered [default: 10] [default: 10]
      --repos <DIR>              Run command across all git repos under DIR (1 level deep)
      --json                     Output as JSON
      --similarity <SIMILARITY>  Minimum similarity threshold (0.0–1.0) [default: 0.85] [default: 0.85]
      --jsonl                    Output as JSON Lines (one object per line)
      --skeleton                 Skeleton mode: replace block/body subtrees with a placeholder, matching on control-flow structure regardless of body content or size
      --include-trait-impls      Include pairs where both blocks are inside same-name functions (likely trait implementations). By default these are suppressed as intentionally parallel, not copy-paste
      --jq <EXPR>                Filter JSON output with jq expression (implies --json)
      --allow <LOCATION>         Allow a similar block pair (add to .normalize/similar-blocks-allow) Accepts file:func:start-end or file:start-end
      --pretty                   Human-friendly output with colors and formatting
      --compact                  Compact output without colors (overrides TTY detection)
      --reason <REASON>          Reason for allowing
      --output-schema            Output JSON schema for the command's return type
      --input-schema             Output JSON schema for the command's input arguments
      --params-json <JSON>       Pass command arguments as JSON (overrides CLI args)
  -r, --root <ROOT>              Root directory (defaults to current directory)
      --exclude <PATTERN>        Exclude paths matching pattern or @alias
      --only <PATTERN>           Include only paths matching pattern or @alias
      --diff [<BASE>]            Analyze only files changed since base ref (e.g., main, HEAD~1) If no BASE given, defaults to origin's default branch
  -h, --help                     Print help
